example of admin function - zserver test

--- a/templates/admin/header.tmpl
+++ b/templates/admin/header.tmpl
@@ -225,6 +225,7 @@ $('document').ready(function(){
 <nav role="navigation" id="lib-nav-primary">
   <ul class="inline-items">
     <li><a id="menu_home" href="/cgi-bin/admin.cgi?rm=welcome">Home</a></li>
+    <li><a id="menu_test_zserver" href="/cgi-bin/admin.cgi?rm=test_zserver">Test a zServer</a></li>
   </ul>
 </nav>
 
