--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -190,10 +190,10 @@
 
   <div id="covers">
     
-    <a href="#" class="coverlink" title="Craig Davidson, Cataract City"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg"></a>
-    <a href="#" class="coverlink" title="Lisa Moore, Caught"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg"></a>
-    <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg"></a>
-    <a href="#" class="coverlink" title="Dennis Bock, Going Home Again"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg"></a>
+    <a href="#" class="coverlink" title="Craig Davidson, Cataract City"><img class="covers4" alt="Craig Davidson, Cataract City" src="/img/covers/gp13-cataractcity.jpg"></a>
+    <a href="#" class="coverlink" title="Lisa Moore, Caught"><img class="covers4" alt="Lisa Moore, Caught" src="/img/covers/gp13-caught.jpeg"></a>
+    <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid"><img class="covers4" alt="Dan Vyleta, The Crooked Maid" src="/img/covers/gp13-crookedmaid.jpg"></a>
+    <a href="#" class="coverlink" title="Dennis Bock, Going Home Again"><img class="covers4" alt="Dennis Bock, Going Home Again" src="/img/covers/gp13-homeagain.jpg"></a>
 
   </div>
 
