--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -18,9 +18,168 @@
 
 	<p>Here is a tutorial on using fILL to find and request titles from any Manitoba public library:</p>
 
-	<object class="fill-help" data="/patrons-searching-tutorial.pdf" type="application/pdf" height="900">
+	<!--<object class="fill-help" data="/patrons-searching-tutorial.pdf" type="application/pdf" height="900">
 	  alt : <a href="/patrons-searching-tutorial.pdf">Patrons - Searching tutorial.pdf</a>
-	</object>
+	</object>-->
+
+
+    <p>
+        <img
+            width="171"
+            height="80"
+            align="left"
+            alt="http://cserv.internal/sites/chts_it_communication/plsb_client_ino/Shared%20Documents/fILL%20-%20Green%20Card%20White%20Text.png"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image002.gif"
+            hspace="12"
+        />
+        <br/>
+        Search Tutorial
+    </p>
+    <h1>
+        <em>How to search for and request interlibrary loan items</em>
+    </h1>
+    <h2>
+        Step 1 – Where to complete a search
+    </h2>
+    <p>
+        Complete a search from any one of the tabs in the fILL website.
+    </p>
+    <p>
+        <img width="663" height="80" alt="screenshot of search area" src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image004.jpg"/>
+    </p>
+    <h2>
+        Step 2 – How to complete a search
+    </h2>
+    <p>
+        Enter your search terms in to the search bar at the top of the screen, and click “Go”.
+    </p>
+    <p>
+        <img
+            width="671"
+            height="81"
+            alt="Screenshot typing into search area"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image006.jpg"
+        />
+    </p>
+    <h2>
+        Step 3 – When is my search complete
+    </h2>
+    <p>
+        <img
+            width="217"
+            height="74"
+            align="left"
+            alt="Screenshot of progress bar"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image007.jpg"
+            hspace="12"
+        />
+        The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
+        fast!).
+    </p>
+    <p>
+        Your search results will look like this:
+        <img
+            width="649"
+            height="398"
+            alt="Screenshot  of a list of 8 search results"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image008.jpg"
+        />
+    </p>
+    <h2>
+        Step 4 – Click on the title you are interested in.
+    </h2>
+    <p>
+        <img
+            width="649"
+            height="276"
+            alt="Screenshot of a search result expanded"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image010.jpg"
+        />
+    </p>
+    <p>
+        If this is the book you'd like to request, click on the “Request” button.
+        <img
+            width="649"
+            height="368"
+            alt="Screenshot of the request button being clicked"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image012.jpg"
+        />
+    </p>
+    <p>
+        If this isn't the right book, click on the title again to hide the details, and try another title.
+    </p>
+    <p>
+        You're done!
+    </p>
+    <p>
+        If you decide you don’t want this item after all, you can cancel your request right away.
+    </p>
+    <p>
+        <img
+            width="609"
+            height="207"
+            alt="Screenshot of the cancel request button is now shown"
+            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image014.jpg"
+        />
+    </p>
+</div>
+<br/>
+<h1>
+    Becoming a Power-user!
+</h1>
+<h2>
+    <em>Refining your search</em>
+</h2>
+<p>
+    <img
+        width="154"
+        height="345"
+        align="right"
+        alt="Screenshot of search refinement options that appear in the aside section after a search"
+        src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image015.jpg"
+        hspace="12"
+    />
+</p>
+<p>
+    In your search results page, along the left-hand side, there is a list of all of the subjects and authors that were found in all of the records your search
+    returned.
+</p>
+<p>
+    The number in parenthesis counts how many of your results have that particular subject or author.
+</p>
+<p>
+    Clicking on a subject or author will refine your search terms by adding that specific information. The system will re-do the search with your new terms.
+</p>
+<p>
+    You can continue to refine your results as often as you need.
+</p>
+<p>
+    Or you can enter a completely new search into the search bar at the top of the screen.
+</p>
+<h2>
+    Sorting the results, and moving from page to page
+</h2>
+<p>
+    <img
+        width="645"
+        height="130"
+        align="left"
+        alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest"
+        src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image017.jpg"
+        hspace="12"
+    />
+    Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
+    list.
+</p>
+<p>
+    You can choose to sort by title or by publication date, by clicking the “Sort by” button at the top of the results list.
+</p>
+<p>
+    You can page through your results by clicking on the “<strong>&lt;&lt; Prev</strong>” and “<strong>Next &gt;&gt;</strong>” links, or by choosing a page
+    number to jump to.
+</p>
+
+
   <p>Or click here to <a href="/patrons-searching-tutorial.pdf">download PDF</a>[285 KB]</p>
 
 </div><!--content div-->
