--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -16,7 +16,7 @@ $('document').ready(function(){
 <div id="clear"></div>
 
 <div id="aside-img-welcome">
-    <img src='/img/card_catalogue.jpg'/>
+    <img src='/img/card_catalogue.jpg' alt="card catalogue cabinet/>
     <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
   </div>
 
