help page cleanup

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -14,16 +14,14 @@
   </div>
 -->
 <div role="main">
-<h2>Help</h2>
-
-	<p>Here is a tutorial on using fILL to find and request titles from any Manitoba public library:</p>
+<h2>Search Tutorial</h2>
 
 	<!--<object class="fill-help" data="/patrons-searching-tutorial.pdf" type="application/pdf" height="900">
 	  alt : <a href="/patrons-searching-tutorial.pdf">Patrons - Searching tutorial.pdf</a>
 	</object>-->
 
 
-    <p>
+ 
         <img
             width="171"
             height="80"
@@ -32,11 +30,11 @@
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image002.gif"
             hspace="12"
         />
-        <br/>
-        Search Tutorial
-    </p>
+    
+       
+
     <h1>
-        <em>How to search for and request interlibrary loan items</em>
+      How to search for and request interlibrary loan items
     </h1>
     <h2>
         Step 1 – Where to complete a search
@@ -53,18 +51,18 @@
     <p>
         Enter your search terms in to the search bar at the top of the screen, and click “Go”.
     </p>
-    <p>
+
         <img
             width="671"
             height="81"
             alt="Screenshot typing into search area"
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image006.jpg"
         />
-    </p>
+ 
     <h2>
         Step 3 – When is my search complete
     </h2>
-    <p>
+    
         <img
             width="217"
             height="74"
@@ -73,38 +71,38 @@
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image007.jpg"
             hspace="12"
         />
-        The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
-        fast!).
-    </p>
+        <p>The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
+        fast!).</p>
+
     <p>
-        Your search results will look like this:
+        Your search results will look like this:</p>
         <img
             width="649"
             height="398"
             alt="Screenshot  of a list of 8 search results"
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image008.jpg"
         />
-    </p>
+  
     <h2>
         Step 4 – Click on the title you are interested in.
     </h2>
-    <p>
+ 
         <img
             width="649"
             height="276"
             alt="Screenshot of a search result expanded"
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image010.jpg"
         />
-    </p>
+
     <p>
-        If this is the book you'd like to request, click on the “Request” button.
+        If this is the book you'd like to request, click on the “Request” button.</p>
         <img
             width="649"
             height="368"
             alt="Screenshot of the request button being clicked"
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image012.jpg"
         />
-    </p>
+
     <p>
         If this isn't the right book, click on the title again to hide the details, and try another title.
     </p>
@@ -114,22 +112,19 @@
     <p>
         If you decide you don’t want this item after all, you can cancel your request right away.
     </p>
-    <p>
+   
         <img
             width="609"
             height="207"
             alt="Screenshot of the cancel request button is now shown"
             src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image014.jpg"
         />
-    </p>
-</div>
-<br/>
-<h1>
-    Becoming a Power-user!
-</h1>
-<h2>
-    <em>Refining your search</em>
-</h2>
+  
+
+
+<h1>Becoming a Power-user!</h1>
+
+<h2>Refining your search</h2>
 <p>
     <img
         width="154"
@@ -156,10 +151,8 @@
 <p>
     Or you can enter a completely new search into the search bar at the top of the screen.
 </p>
-<h2>
-    Sorting the results, and moving from page to page
-</h2>
-<p>
+<h2>Sorting the results, and moving from page to page</h2>
+
     <img
         width="645"
         height="130"
@@ -168,7 +161,7 @@
         src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image017.jpg"
         hspace="12"
     />
-    Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
+    <p>Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
     list.
 </p>
 <p>
