added images for help

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -20,18 +20,7 @@
 	  alt : <a href="/patrons-searching-tutorial.pdf">Patrons - Searching tutorial.pdf</a>
 	</object>-->
 
-
- 
-        <img
-            width="171"
-            height="80"
-            align="left"
-            alt="http://cserv.internal/sites/chts_it_communication/plsb_client_ino/Shared%20Documents/fILL%20-%20Green%20Card%20White%20Text.png"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image002.gif"
-            hspace="12"
-        />
-    
-       
+        <img alt="main navigation and search box" src="/img/help01.png"/>
 
     <h1>
       How to search for and request interlibrary loan items
@@ -43,7 +32,7 @@
         Complete a search from any one of the tabs in the fILL website.
     </p>
     <p>
-        <img width="663" height="80" alt="screenshot of search area" src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image004.jpg"/>
+        <img alt="screenshot of search area" src="/img/help02.png"/>
     </p>
     <h2>
         Step 2 – How to complete a search
@@ -52,56 +41,29 @@
         Enter your search terms in to the search bar at the top of the screen, and click “Go”.
     </p>
 
-        <img
-            width="671"
-            height="81"
-            alt="Screenshot typing into search area"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image006.jpg"
-        />
+        <img alt="Screenshot typing into search area" src="/img/help03.png"/>
  
     <h2>
         Step 3 – When is my search complete
     </h2>
     
-        <img
-            width="217"
-            height="74"
-            align="left"
-            alt="Screenshot of progress bar"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image007.jpg"
-            hspace="12"
-        />
+        <img alt="Screenshot of progress bar" src="/img/help04.png" />
         <p>The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
         fast!).</p>
 
     <p>
         Your search results will look like this:</p>
-        <img
-            width="649"
-            height="398"
-            alt="Screenshot  of a list of 8 search results"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image008.jpg"
-        />
+        <img alt="Screenshot  of a list of 8 search results" src="/img/help05.png" />
   
     <h2>
         Step 4 – Click on the title you are interested in.
     </h2>
  
-        <img
-            width="649"
-            height="276"
-            alt="Screenshot of a search result expanded"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image010.jpg"
-        />
+        <img alt="Screenshot of a search result expanded" src="/img/help06.png" />
 
     <p>
         If this is the book you'd like to request, click on the “Request” button.</p>
-        <img
-            width="649"
-            height="368"
-            alt="Screenshot of the request button being clicked"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image012.jpg"
-        />
+        <img alt="Screenshot of the request button being clicked" src="/img/help07.png" />
 
     <p>
         If this isn't the right book, click on the title again to hide the details, and try another title.
@@ -113,27 +75,13 @@
         If you decide you don’t want this item after all, you can cancel your request right away.
     </p>
    
-        <img
-            width="609"
-            height="207"
-            alt="Screenshot of the cancel request button is now shown"
-            src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image014.jpg"
-        />
-  
-
+        <img alt="Screenshot of the cancel request button is now shown" src="/img/help08.png"/>
 
 <h1>Becoming a Power-user!</h1>
 
 <h2>Refining your search</h2>
 <p>
-    <img
-        width="154"
-        height="345"
-        align="right"
-        alt="Screenshot of search refinement options that appear in the aside section after a search"
-        src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image015.jpg"
-        hspace="12"
-    />
+    <img alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img/help09.png" />
 </p>
 <p>
     In your search results page, along the left-hand side, there is a list of all of the subjects and authors that were found in all of the records your search
@@ -154,12 +102,10 @@
 <h2>Sorting the results, and moving from page to page</h2>
 
     <img
-        width="645"
-        height="130"
-        align="left"
+
         alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest"
-        src="file:///C:/Users/ANWOOD~1/AppData/Local/Temp/msohtmlclip1/01/clip_image017.jpg"
-        hspace="12"
+        src="/img/help10.png"
+    
     />
     <p>Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
     list.
