new help images id

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -8,8 +8,8 @@
 
 <div id="content">
 <!--
-  <div id="aside-img id="help-img"-left">
-      <img id="help-img" src='/img id="help-img"/fill-help.jpg' alt="Three children sitting on a couch in the library reading books"/>
+  <div id="aside-img-left">
+      <img src='/img/fill-help.jpg' alt="Three children sitting on a couch in the library reading books"/>
       <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
   </div>
 -->
@@ -32,7 +32,7 @@
         Complete a search from any one of the tabs in the fILL website.
     </p>
     <p>
-        <img id="help-img" alt="screenshot of search area" src="/img id="help-img"/help01.png"/>
+        <img id="help-img" alt="screenshot of search area" src="/img/help01.png"/>
     </p>
     <h2>
         Step 2 – How to complete a search
@@ -41,29 +41,29 @@
         Enter your search terms in to the search bar at the top of the screen, and click “Go”.
     </p>
 
-        <img id="help-img" alt="Screenshot typing into search area" src="/img id="help-img"/help02.png"/>
+        <img id="help-img" alt="Screenshot typing into search area" src="/img/help02.png"/>
  
     <h2>
         Step 3 – When is my search complete
     </h2>
     
-        <img id="help-img" alt="Screenshot of progress bar" src="/img id="help-img"/help03.png" />
+        <img id="help-img" alt="Screenshot of progress bar" src="/img/help03.png" />
         <p>The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
         fast!).</p>
 
     <p>
         Your search results will look like this:</p>
-        <img id="help-img" alt="Screenshot  of a list of 8 search results" src="/img id="help-img"/help04.png" />
+        <img id="help-img" alt="Screenshot  of a list of 8 search results" src="/img/help04.png" />
   
     <h2>
         Step 4 – Click on the title you are interested in.
     </h2>
  
-        <img id="help-img" alt="Screenshot of a search result expanded" src="/img id="help-img"/help05.png" />
+        <img id="help-img" alt="Screenshot of a search result expanded" src="/img/help05.png" />
 
     <p>
         If this is the book you'd like to request, click on the “Request” button.</p>
-        <img id="help-img" alt="Screenshot of the request button being clicked" src="/img id="help-img"/help06.png" />
+        <img id="help-img" alt="Screenshot of the request button being clicked" src="/img/help06.png" />
 
     <p>
         If this isn't the right book, click on the title again to hide the details, and try another title.
@@ -75,13 +75,13 @@
         If you decide you don’t want this item after all, you can cancel your request right away.
     </p>
    
-        <img id="help-img" alt="Screenshot of the cancel request button is now shown" src="/img id="help-img"/help07.png"/>
+        <img id="help-img" alt="Screenshot of the cancel request button is now shown" src="/img/help07.png"/>
 
 <h1>Becoming a Power-user!</h1>
 
 <h2>Refining your search</h2>
 <p>
-    <img id="help-img" alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img id="help-img"/help08.png" />
+    <img id="help-img" alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img/help08.png" />
 </p>
 <p>
     In your search results page, along the left-hand side, there is a list of all of the subjects and authors that were found in all of the records your search
@@ -101,7 +101,7 @@
 </p>
 <h2>Sorting the results, and moving from page to page</h2>
 
-    <img id="help-img" alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest" src="/img id="help-img"/help09.png"/>
+    <img id="help-img" alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest" src="/img/help09.png"/>
 
     <p>Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
     list.
