--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -50,26 +50,26 @@
     </h2>
     
         
-        <div id="help-img"><img alt="Screenshot of progress bar" src="/img/help03.png" />
+        <div id="help-img"><img alt="Screenshot of progress bar" src="/img/help03.png" /></div>
         <p>The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
         fast!).</p>
 
     <p>
         Your search results will look like this:</p>
         
-        <div id="help-img"><img alt="Screenshot  of a list of 8 search results" src="/img/help04.png" />
+        <div id="help-img"><img alt="Screenshot  of a list of 8 search results" src="/img/help04.png" /></div>
   
     <h2>
         Step 4 – Click on the title you are interested in.
     </h2>
  
         
-        <div id="help-img"><img alt="Screenshot of a search result expanded" src="/img/help05.png" />
+        <div id="help-img"><img alt="Screenshot of a search result expanded" src="/img/help05.png" /></div>
 
     <p>
         If this is the book you'd like to request, click on the “Request” button.</p>
         
-        <div id="help-img"><img alt="Screenshot of the request button being clicked" src="/img/help06.png" />
+        <div id="help-img"><img alt="Screenshot of the request button being clicked" src="/img/help06.png" /></div>
 
     <p>
         If this isn't the right book, click on the title again to hide the details, and try another title.
@@ -89,7 +89,7 @@
 <h2>Refining your search</h2>
 <p>
     
-    <div id="help-img"><img alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img/help08.png" />
+    <div id="help-img"><img alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img/help08.png" /></div>
 </p>
 <p>
     In your search results page, along the left-hand side, there is a list of all of the subjects and authors that were found in all of the records your search
