--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -98,7 +98,7 @@ $('document').ready(function(){
 <div id="clear"></div>
 <div id="content">
   <div id="aside-img-left">
-    <img src="/img/regional_map.gif" alt="map of Manitoba with all the regions listed">
+    <img src="/img/regional_map.png" alt="map of Manitoba with all the regions listed">
   </div>
 
   <div id="main-info-right" class="tone-box">
