--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -6,6 +6,7 @@
 
 <div id="content">
 	<div id="main-info-left" class="tone-box" role="main">
+	<h1>Contact</h1>
 	    <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
 			<h3><TMPL_VAR name="library"></h3>
 			<p>Phone: <TMPL_VAR name="phone"></p>
