--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -110,7 +110,7 @@ $('document').ready(function(){
 
 </script>
 <div id="content">  
-
+<h1>Current Borrowing</h1>
         <div id="waitDiv">
           Loading... <img src="/wait.gif">
         </div>
