new rotations admin report on high-circ items

--- a/templates/submenu_rotations_admin.tmpl
+++ b/templates/submenu_rotations_admin.tmpl
@@ -15,6 +15,12 @@
       </a>
     </li>
 
+    <li id="menu_rotations_report_item_highcirc">
+      <a href="/cgi-bin/rotations_admin.cgi?rm=report_item_highcirc">
+      high circ items
+      </a>
+    </li>
+
   </ul>
 </div>
 
