fixes to login screen 2

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -21,6 +21,7 @@ $('document').ready(function(){
   </div>
 
 <div id="main-info-welcome">
+<p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
 <div class="login">
 
   <form action="/cgi-bin/public.cgi" method="post" name="loginform" id="loginform">
