--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -33,7 +33,7 @@
     </p>
     <p>
         
-        <div id="help-img"><img alt="screenshot of search area" src="/img/help01.png"/></div>
+        <div class="help-img"><img alt="screenshot of search area" src="/img/help01.png"/></div>
     </p>
     <h3>
         Step 2 – How to complete a search
@@ -43,33 +43,33 @@
     </p>
 
         
-        <div id="help-img"><img alt="Screenshot typing into search area" src="/img/help02.png"/></div>
+        <div class="help-img"><img alt="Screenshot typing into search area" src="/img/help02.png"/></div>
  
     <h3>
         Step 3 – When is my search complete
     </h3>
     
         
-        <div id="help-img"><img alt="Screenshot of progress bar" src="/img/help03.png" /></div>
+        <div class="help-img"><img alt="Screenshot of progress bar" src="/img/help03.png" /></div>
         <p>The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
         fast!).</p>
 
     <p>
         Your search results will look like this:</p>
         
-        <div id="help-img"><img alt="Screenshot  of a list of 8 search results" src="/img/help04.png" /></div>
+        <div class="help-img"><img alt="Screenshot  of a list of 8 search results" src="/img/help04.png" /></div>
   
     <h3>
         Step 4 – Click on the title you are interested in.
     </h3>
  
         
-        <div id="help-img"><img alt="Screenshot of a search result expanded" src="/img/help05.png" /></div>
+        <div class="help-img"><img alt="Screenshot of a search result expanded" src="/img/help05.png" /></div>
 
     <p>
         If this is the book you'd like to request, click on the “Request” button.</p>
         
-        <div id="help-img"><img alt="Screenshot of the request button being clicked" src="/img/help06.png" /></div>
+        <div class="help-img"><img alt="Screenshot of the request button being clicked" src="/img/help06.png" /></div>
 
     <p>
         If this isn't the right book, click on the title again to hide the details, and try another title.
@@ -82,14 +82,14 @@
     </p>
    
         
-        <div id="help-img"><img alt="Screenshot of the cancel request button is now shown" src="/img/help07.png"/></div>
+        <div class="help-img"><img alt="Screenshot of the cancel request button is now shown" src="/img/help07.png"/></div>
 
 <h2>Becoming a Power-user!</h2>
 
 <h3>Refining your search</h3>
 <p>
     
-    <div id="help-img"><img alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img/help08.png" /></div>
+    <div class="help-img"><img alt="Screenshot of search refinement options that appear in the aside section after a search" src="/img/help08.png" /></div>
 </p>
 <p>
     In your search results page, along the left-hand side, there is a list of all of the subjects and authors that were found in all of the records your search
@@ -110,7 +110,7 @@
 <h3>Sorting the results, and moving from page to page</h3>
 
     
-    <div id="help-img"><img alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest" src="/img/help09.png"/></div>
+    <div class="help-img"><img alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest" src="/img/help09.png"/></div>
 
     <p>Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
     list.
